variables.Variables.scala.code
var nbPas = 0 // Compte le nombre de pas effectués
while (!estSurBiscuit()){
  avance()
}
porterBiscuit()